# VendingMachine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
demo/: Dockerfile  docker.js  package.json  server.js
src/: main.cpp
src/core/: Cash.cpp  Cash.h  Good.cpp  Good.h  Money.cpp  Money.h  VendingMachine.cpp  VendingMachine.h
src/core/contract/: HasPersistence.cpp  HasPersistence.h  HasQuantity.cpp  HasQuantity.h
src/core/error/: LockError.h  NotSufficientError.h  ValueError.h
src/ui/: TUI.cpp  TUI.h  WebUI.cpp  WebUI.h  ui_home.cpp  ui_home.h  ui_util.cpp  ui_util.h
tests/: Cash.cpp  Good.cpp  Money.cpp
web/: index.html  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue  main.js
web/src/assets/styles/: app.css
web/src/utils/: goods.js  images.js  money.js
